added imgs and my work section with cards

--- a/index.html
+++ b/index.html
@@ -19,6 +19,54 @@
         </nav>
     </header>
 
+    <div class="hero">
+
+    </div>
+    <!-- about me -->
+    <section class="container">
+        <div class="sidebar">
+            <h2>About Me</h2>
+        </div>
+        <div class="content">
+        <p >
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit itaque deleniti distinctio, minus dicta debitis quis, exercitationem quibusdam, nobis corrupti possimus repellat excepturi id veritatis facere iste eius porro! Magni, rem aut consectetur culpa assumenda maxime laboriosam. Natus fugiat quasi laboriosam nisi voluptatem sequi labore, soluta adipisci vero ex perspiciatis facere neque sunt eius consequuntur laudantium impedit aliquid eaque sit quibusdam distinctio sapiente beatae assumenda quaerat? Quos iure reiciendis non blanditiis debitis accusamus distinctio rem illum enim ipsa autem, facilis temporibus velit perspiciatis totam. Soluta quod sequi, cumque at facilis quam totam velit officia fugit quas ipsam animi nisi unde.
+        </p>
+        </div>
+    </section>
+
+    <!-- My Work -->
+    <section class="container">
+        <div class="sidebar">
+            <h2>About Me</h2>
+        </div>
+        <section class="content">
+            <div class="card">
+                <h3>Herions</h3>
+                <img src="assets/images/hero2.jpg" alt="#">
+            </div>
+            <div class="card">
+                <h3>Herions</h3>
+                <img src="assets/images/hero2.jpg" alt="#">
+            </div>
+            <div class="card">
+                <h3>Herions</h3>
+                <img src="assets/images/hero2.jpg" alt="#">
+            </div>
+            <div class="card">
+                <h3>Herions</h3>
+                <img src="assets/images/hero2.jpg" alt="#">
+            </div>
+            <div class="card">
+                <h3>Herions</h3>
+                <img src="assets/images/hero2.jpg" alt="">
+            </div>
+        </section>
+    </section>
+    <footer class="container">
+        <div class="sidebar">
+            <h2>Contact</h2>
+        </div>
+    </footer>
 
 </body>
 </html>
