I fotgot but It has finished styling and it is reposnize to the screen

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 </head>
 <body>
     <header>
-        <h1>Giovanni</h1>
+        <h1>Giovanni</h1> 
         <nav>
-            <a href="#">About me</a>
-            <a href="#">My work</a>
-            <a href="#">Contact</a>
+            <a href="#aboutme">About me</a>
+            <a href="#mywork">My work</a>
+            <a href="#contact">Contact</a>
         </nav>
     </header>
 
@@ -23,7 +23,7 @@
 
     </div>
     <!-- about me -->
-    <section class="container">
+    <section class="container" id="aboutme">
         <div class="sidebar">
             <h2>About Me</h2>
         </div>
@@ -35,36 +35,49 @@
     </section>
 
     <!-- My Work -->
-    <section class="container">
+    <section class="container" id="mywork">
         <div class="sidebar">
-            <h2>About Me</h2>
+            <h2>My Work</h2>
         </div>
-        <section class="content">
+        <section class="content myWork">
             <div class="card">
-                <h3>Herions</h3>
-                <img src="assets/images/hero2.jpg" alt="#">
+                <a href="https://github.com/Giovanni-Ramirez/01-challenge" target="_blank">
+                    <h3>Herions</h3>
+                    <img src="assets/images/hero2.jpg" alt="#">
+                </a>
             </div>
             <div class="card">
-                <h3>Herions</h3>
-                <img src="assets/images/hero2.jpg" alt="#">
+                <a href="#">
+                    <h3>Herions</h3>
+                    <img src="assets/images/hero2.jpg" alt="#">
+                </a>
             </div>
             <div class="card">
-                <h3>Herions</h3>
-                <img src="assets/images/hero2.jpg" alt="#">
+                <a href="#">
+                    <h3>Herions</h3>
+                    <img src="assets/images/hero2.jpg" alt="#">
+                </a>
             </div>
             <div class="card">
-                <h3>Herions</h3>
-                <img src="assets/images/hero2.jpg" alt="#">
+                <a href="#">
+                    <h3>Herions</h3>
+                    <img src="assets/images/hero2.jpg" alt="#">
+                </a>
             </div>
             <div class="card">
-                <h3>Herions</h3>
-                <img src="assets/images/hero2.jpg" alt="">
+                <a href="#">
+                    <h3>Herions</h3>
+                    <img src="assets/images/hero2.jpg" alt="#">
+                </a>
             </div>
         </section>
     </section>
     <footer class="container">
-        <div class="sidebar">
+        <div class="sidebar" id="contact">
             <h2>Contact</h2>
+        </div>
+        <div class="content">
+
         </div>
     </footer>
 
