--- a/index.html
+++ b/index.html
@@ -20,7 +20,15 @@
     </header>
 
     <div class="hero">
-
+        <div class="heroContainer">
+            <div class="heroText">
+                <h2>Hello, my <br> name's Giovanni.</h2>
+                <p>I'm currently a student <br> in a coding bootcamp and <br> I am a Full Stack Web developer.</p>
+            </div>
+            <div class="heroImg">
+                <img src="/assets/images/regain.jpg" alt="">
+            </div>
+        </div>
     </div>
     <!-- about me -->
     <section class="container" id="aboutme">
@@ -43,30 +51,30 @@
             <div class="card">
                 <a href="https://github.com/Giovanni-Ramirez/01-challenge" target="_blank">
                     <h3>Herions</h3>
+                    <img src="assets/images/horiseonProject.png" alt="#">
+                </a>
+            </div>
+            <div class="card">
+                <a href="#">
+                    <h3>Coming soon</h3>
                     <img src="assets/images/hero2.jpg" alt="#">
                 </a>
             </div>
             <div class="card">
                 <a href="#">
-                    <h3>Herions</h3>
+                    <h3>Coming soon</h3>
                     <img src="assets/images/hero2.jpg" alt="#">
                 </a>
             </div>
             <div class="card">
                 <a href="#">
-                    <h3>Herions</h3>
+                    <h3>Coming soon</h3>
                     <img src="assets/images/hero2.jpg" alt="#">
                 </a>
             </div>
             <div class="card">
                 <a href="#">
-                    <h3>Herions</h3>
-                    <img src="assets/images/hero2.jpg" alt="#">
-                </a>
-            </div>
-            <div class="card">
-                <a href="#">
-                    <h3>Herions</h3>
+                    <h3>Coming soon</h3>
                     <img src="assets/images/hero2.jpg" alt="#">
                 </a>
             </div>
