--- a/index.html
+++ b/index.html
@@ -84,8 +84,16 @@
         <div class="sidebar" id="contact">
             <h2>Contact</h2>
         </div>
-        <div class="content">
-
+        <div class="content contactInfo">
+            <div>
+                <p>(555)555-5555</p>
+            </div>
+            <div>
+                <p>fakeEmail@gmail.com</p>
+            </div>
+            <div>
+                <p>github</p>
+            </div>
         </div>
     </footer>
 
