--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <p>I'm currently a student <br> in a coding bootcamp and <br> I am a Full Stack Web developer.</p>
             </div>
             <div class="heroImg">
-                <img src="/assets/images/regain.jpg" alt="">
+                <img src="/assets/images/regain.jpg" alt="Avatar image">
             </div>
         </div>
     </div>
@@ -51,7 +51,7 @@
             <div class="card">
                 <a href="https://github.com/Giovanni-Ramirez/01-challenge" target="_blank">
                     <h3>Herions</h3>
-                    <img src="assets/images/horiseonProject.png" alt="#">
+                    <img src="assets/images/horiseonProject.png" alt="screen shot of website">
                 </a>
             </div>
             <div class="card">
