--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <p>I'm currently a student <br> in a coding bootcamp and <br> I am a Full Stack Web developer.</p>
             </div>
             <div class="heroImg">
-                <img src="/assets/images/regain.jpg" alt="Avatar image">
+                <img src="/assets/images/Avatar.jpg" alt="Avatar image">
             </div>
         </div>
     </div>
